# torchvision_detection

./: README.md  pyproject.toml  setup.cfg
src/detection/: __init__.py  coco_eval.py  coco_utils.py  engine.py  presets.py  train.py  transforms.py  utils.py
src/fasterrcnn_utils/: __init__.py  model.py  record.py  train_utils.py
src/model/: __init__.py  model.py  train_utils.py
src/model_utils/: model.py  train_utils.py
