[metadata]
name = torchvision_detection
version = 0.0.1
author = Y. Natsume
author_email = None
description = A package of utility functions for performing object detection using torchvision models. Heavily based on the functions found in https://github.com/pytorch/vision/tree/main/references/detection.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natsunoyuki/torchvision_detection
project_urls =
    Bug Tracker = https://github.com/natsunoyuki/torchvision_detection/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
